--- a/basic-accordion/index.html
+++ b/basic-accordion/index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Accordion</title>
 </head>
 <body>
+    <section>
+        <div class="container">
+            <div class="accordion">
+                <div class="accordion-item" id="question1">
+                    <a class="accordion-link" href="#question1">
+                    How often do you go to the beach?
+                    <ion-icon class="add-icon" name="chevron-down-circle-outline"></ion-icon>
+                    <ion-icon class="remove-icon" name="chevron-down-circle-outline"></ion-icon>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita corrupti iusto necessitatibus rerum maiores quidem ullam similique ex accusamus suscipit dolorem nobis accusantium ratione quas, distinctio at. Esse, officia!
+                        </p>
+
+                    </div>
+                </div>
+                <div class="accordion-item" id="question2">
+                    <a class="accordion-link" href="#question2">
+                    How often do you go shopping?
+                    <ion-icon class="add-icon" name="chevron-down-circle-outline"></ion-icon>
+                    <ion-icon class="remove-icon" name="chevron-up-circle-outline"></ion-icon>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita corrupti iusto necessitatibus rerum maiores quidem ullam similique ex accusamus suscipit dolorem nobis accusantium ratione quas, distinctio at. Esse, officia!
+                        </p>
+
+                    </div>
+                </div>
+                <div class="accordion-item" id="question3">
+                    <a class="accordion-link" href="#question3">
+                    How often do you walk the dog?
+                    <ion-icon class="add-icon" name="chevron-down-circle-outline"></ion-icon>
+                    <ion-icon class="remove-icon" name="chevron-up-circle-outline"></ion-icon>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita corrupti iusto necessitatibus rerum maiores quidem ullam similique ex accusamus suscipit dolorem nobis accusantium ratione quas, distinctio at. Esse, officia!
+                        </p>
+
+                    </div>
+                </div>
+                <div class="accordion-item" id="question4">
+                    <a class="accordion-link" href="#question4">
+                    How often do you go to your parents house?
+                    <ion-icon class="add-icon" name="chevron-down-circle-outline"></ion-icon>
+                    <ion-icon class="remove-icon" name="chevron-up-circle-outline"></ion-icon>
+                    </a>
+                    <div class="answer">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita corrupti iusto necessitatibus rerum maiores quidem ullam similique ex accusamus suscipit dolorem nobis accusantium ratione quas, distinctio at. Esse, officia!
+                        </p>
     
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ion icons -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
