--- a/drag_and_drop_stuff/react-dndn-morioh/public/index.html
+++ b/drag_and_drop_stuff/react-dndn-morioh/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React DND with Mahmoud Shehata</title>
+    <title>The Complete Guide to Drag and Drop in React</title>
   </head>
 
   <body>
